--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/theme.config.jsx", "src/pages/index.mdx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/theme.config.jsx", "src/pages/index.mdx", "src/pages/api/og.jsx"],
   "exclude": ["node_modules"]
 }
