--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
@@ -21,6 +22,7 @@
     "eslint-config-next": "13.1.6",
     "framer-motion": "^9.0.1",
     "next": "13.1.6",
+    "next-sitemap": "^3.1.52",
     "nextra": "^2.2.14",
     "nextra-theme-docs": "^2.2.14",
     "react": "18.2.0",
