--- a/package.json
+++ b/package.json
@@ -1,32 +1,38 @@
 {
-  "name": "clerk-docs-2023",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "postbuild": "next-sitemap",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@chakra-ui/react": "^2.5.1",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@next/font": "13.1.6",
-    "@types/node": "18.11.19",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "@vercel/og": "^0.1.0",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "framer-motion": "^9.1.7",
-    "next": "13.1.6",
-    "next-sitemap": "^3.1.55",
-    "nextra": "^2.2.19",
-    "nextra-theme-docs": "^2.2.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5"
-  }
+    "name": "clerk-docs-2023",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "postbuild": "next-sitemap",
+        "start": "next start",
+        "lint": "next lint",
+        "format": "npx prettier --write"
+    },
+    "dependencies": {
+        "@chakra-ui/react": "^2.5.1",
+        "@emotion/react": "^11.10.6",
+        "@emotion/styled": "^11.10.6",
+        "@next/font": "13.1.6",
+        "@types/node": "18.11.19",
+        "@types/react": "18.0.27",
+        "@types/react-dom": "18.0.10",
+        "@vercel/og": "^0.1.0",
+        "eslint": "8.33.0",
+        "eslint-config-next": "13.1.6",
+        "framer-motion": "^9.1.7",
+        "next": "13.1.6",
+        "next-sitemap": "^3.1.55",
+        "nextra": "^2.2.19",
+        "nextra-theme-docs": "^2.2.19",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "typescript": "4.9.5"
+    },
+    "devDependencies": {
+        "eslint-plugin-mdx": "^2.0.5",
+        "eslint-plugin-prettier": "^4.2.1",
+        "prettier": "^2.8.4"
+    }
 }
