--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,9 @@
 {
-  "extends": "next/core-web-vitals"
+    "extends": [
+        "next/core-web-vitals",
+        "plugin:mdx/recommended"
+    ],
+    "settings": {
+        "mdx/code-blocks": true
+    }
 }
