--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
         "format": "npx prettier --write"
     },
     "dependencies": {
-        "@chakra-ui/react": "^2.5.1",
-        "@emotion/react": "^11.10.6",
-        "@emotion/styled": "^11.10.6",
         "@next/font": "13.1.6",
         "@types/node": "18.11.19",
         "@types/react": "18.0.27",
@@ -21,7 +18,6 @@
         "@vercel/og": "^0.1.0",
         "eslint": "8.33.0",
         "eslint-config-next": "13.1.6",
-        "framer-motion": "^9.1.7",
         "next": "13.1.6",
         "next-sitemap": "^3.1.55",
         "nextra": "^2.2.19",
@@ -31,8 +27,11 @@
         "typescript": "4.9.5"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.14",
         "eslint-plugin-mdx": "^2.0.5",
         "eslint-plugin-prettier": "^4.2.1",
-        "prettier": "^2.8.4"
+        "postcss": "^8.4.21",
+        "prettier": "^2.8.4",
+        "tailwindcss": "^3.2.7"
     }
 }
