--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "format": "npx prettier --write"
     },
     "dependencies": {
+        "@headlessui/react": "^1.7.13",
         "@next/font": "13.1.6",
         "@types/node": "18.11.19",
         "@types/react": "18.0.27",
@@ -22,12 +23,15 @@
         "next-sitemap": "^3.1.55",
         "nextra": "^2.2.19",
         "nextra-theme-docs": "^2.2.19",
+        "prism-react-renderer": "^1.3.5",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-icons": "^4.8.0",
         "typescript": "4.9.5"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.14",
+        "clsx": "^1.2.1",
         "eslint-plugin-mdx": "^2.0.5",
         "eslint-plugin-prettier": "^4.2.1",
         "postcss": "^8.4.21",
