chore: upgrade all deps, improve prettier usage

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,10 @@
 {
     "extends": [
         "next/core-web-vitals",
+        "plugin:prettier/recommended",
         "plugin:mdx/recommended"
     ],
+    "plugins": ["prettier"],
     "settings": {
         "mdx/code-blocks": true
     }
