--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "postbuild": "next-sitemap",
         "start": "next start",
         "lint": "next lint",
-        "format": "npx prettier --write src"
+        "format": "npx prettier --write src",
+        "prepare": "husky install"
     },
     "dependencies": {
         "@headlessui/react": "^1.7.14",
@@ -29,11 +30,16 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.14",
+        "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-mdx": "^2.1.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "eslint-config-prettier": "^8.8.0",
+        "husky": "^8.0.3",
+        "lint-staged": "^13.2.2",
         "postcss": "^8.4.21",
         "prettier": "^2.8.8",
         "tailwindcss": "^3.3.2"
+    },
+    "lint-staged": {
+        "*{.js,.jsx,.ts,.tsx}": "prettier --write"
     }
 }
