chore: add eslint mdx2 parsing

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,19 @@
 {
-    "extends": [
-        "next/core-web-vitals",
-        "plugin:prettier/recommended",
-        "plugin:mdx/recommended"
-    ],
-    "plugins": ["prettier"],
-    "settings": {
-        "mdx/code-blocks": true
-    }
+    "overrides": [
+        {
+            "files": ["*.mdx", "*.md"],
+            "extends": ["plugin:mdx/recommended"],
+            "settings": {
+                "mdx/code-blocks": true
+            }
+        },
+        {
+            "files": ["*.js", "*.jsx", "*.ts", "*.tsx"],
+            "extends": [
+                "next/core-web-vitals",
+                "plugin:prettier/recommended"
+            ],
+            "plugins": ["prettier"]
+        }
+    ]
 }
