--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "postbuild": "next-sitemap",
         "start": "next start",
         "lint": "next lint",
-        "format": "npx prettier --write src",
+        "format": "eslint --fix .",
         "prepare": "husky install"
     },
     "dependencies": {
@@ -37,9 +37,13 @@
         "lint-staged": "^13.2.2",
         "postcss": "^8.4.21",
         "prettier": "^2.8.8",
+        "remark-preset-lint-consistent": "^5.1.1",
+        "remark-preset-lint-markdown-style-guide": "^5.1.2",
+        "remark-preset-lint-recommended": "^6.1.2",
+        "remark-preset-prettier": "^2.0.1",
         "tailwindcss": "^3.3.2"
     },
     "lint-staged": {
-        "*{.js,.jsx,.ts,.tsx}": "prettier --write"
+        "*{.js,.jsx,.ts,.tsx,.mdx,.md}": "eslint --fix"
     }
 }
