--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "eslint-config-next": "13.4.2",
         "next": "13.4.2",
         "next-sitemap": "^4.0.9",
+        "next-themes": "^0.2.1",
         "nextra": "^2.5.2",
         "nextra-theme-docs": "^2.5.2",
         "react": "18.2.0",
