--- a/package.json
+++ b/package.json
@@ -1,50 +1,50 @@
 {
-    "name": "clerk-docs-2023",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "dev": "next dev",
-        "build": "next build",
-        "postbuild": "next-sitemap",
-        "start": "next start",
-        "lint": "next lint",
-        "format": "eslint --fix .",
-        "prepare": "husky install"
-    },
-    "dependencies": {
-        "@headlessui/react": "^1.7.14",
-        "@types/node": "18.11.19",
-        "@types/react": "18.0.27",
-        "@types/react-dom": "18.0.10",
-        "@vercel/og": "^0.5.4",
-        "eslint": "8.40.0",
-        "eslint-config-next": "13.4.2",
-        "next": "13.4.2",
-        "next-sitemap": "^4.0.9",
-        "next-themes": "^0.2.1",
-        "nextra": "^2.5.2",
-        "nextra-theme-docs": "^2.5.2",
-        "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "react-icons": "^4.8.0",
-        "typescript": "4.9.5"
-    },
-    "devDependencies": {
-        "autoprefixer": "^10.4.14",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-mdx": "^2.1.0",
-        "eslint-plugin-prettier": "^4.2.1",
-        "husky": "^8.0.3",
-        "lint-staged": "^13.2.2",
-        "postcss": "^8.4.21",
-        "prettier": "^2.8.8",
-        "remark-preset-lint-consistent": "^5.1.1",
-        "remark-preset-lint-markdown-style-guide": "^5.1.2",
-        "remark-preset-lint-recommended": "^6.1.2",
-        "remark-preset-prettier": "^2.0.1",
-        "tailwindcss": "^3.3.2"
-    },
-    "lint-staged": {
-        "*{.js,.jsx,.ts,.tsx,.mdx,.md}": "eslint --fix"
-    }
+  "name": "clerk-docs-2023",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "postbuild": "next-sitemap",
+    "start": "next start",
+    "lint": "next lint",
+    "format": "eslint --fix .",
+    "prepare": "husky install"
+  },
+  "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@types/node": "18.11.19",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "@vercel/og": "^0.5.6",
+    "eslint": "8.40.0",
+    "eslint-config-next": "^13.4.4",
+    "next": "^13.4.4",
+    "next-sitemap": "^4.1.3",
+    "next-themes": "^0.2.1",
+    "nextra": "^2.6.2",
+    "nextra-theme-docs": "^2.6.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
+    "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-mdx": "^2.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^13.2.2",
+    "postcss": "^8.4.24",
+    "prettier": "^2.8.8",
+    "remark-preset-lint-consistent": "^5.1.2",
+    "remark-preset-lint-markdown-style-guide": "^5.1.3",
+    "remark-preset-lint-recommended": "^6.1.3",
+    "remark-preset-prettier": "^2.0.1",
+    "tailwindcss": "^3.3.2"
+  },
+  "lint-staged": {
+    "*{.js,.jsx,.ts,.tsx,.mdx,.md}": "eslint --fix"
+  }
 }
