WIP: mdx sidebar

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -1,39 +1,330 @@
 [
-  "# Learning",
-  ["Get Started", [
-    ["Why Clerk?", "/getting-started/why-clerk"],
-    ["Setup Clerk", "/getting-started/setup-clerk"]
-  ]],
+  ["Home", "/"],
+  ["Why Clerk?", "/why-clerk"],
+  [
+    {
+      "title": "Quickstarts & Tutorials",
+      "icon": "lightning-bolt",
+      "root": "quickstarts"
+    },
+    [
+      ["Overview", "/quickstarts/overview"],
+      "# Full Stack",
+      ["Next.js", "/quickstarts/nextjs"],
+      ["Remix", "/quickstarts/remix"],
+      ["Gatsby", "/quickstarts/gatsby"],
+      ["RedwoodJS", "/quickstarts/redwood"],
+      "# Frontend",
+      ["JavaScript", "/quickstarts/frontend/javascript"],
+      ["React", "/quickstarts/react"],
+      "# Backend",
+      ["Express", "/quickstarts/express"],
+      ["Fastify", "/quickstarts/fastify"],
+      ["Ruby / Rails", "/quickstarts/ruby-rails"],
+      "# Example Apps",
+      ["Next.js starter repo", "/quickstarts/ruby-rails"],
+      ["Remix starter repo", "/quickstarts/ruby-rails"]
+    ]
+  ],
   "---",
-  ["Quickstarts", [
-    ["Frontend", [
-      ["React", "/quickstarts/frontend/react"],
-      ["JavaScript", "/quickstarts/frontend/javascript"]
-    ]],
-    ["Full Stack", [
-      ["Next.js", "/quickstarts/full-stack/nextjs"],
-      ["Remix", "/quickstarts/full-stack/remix"],
-      ["Gatsby", "/quickstarts/full-stack/gatsby"],
-      ["RedwoodJS", "/quickstarts/full-stack/redwood"]
-    ]],
-    ["Backend", [
-      ["Express", "/quickstarts/backend/express"],
-      ["Fastify", "/quickstarts/backend/fastify"],
-      ["Ruby / Rails", "/quickstarts/backend/ruby"]
-    ]]
-  ]],
-  "# Reference",
-  ["General", [
-    ["Apperance", [
-      ["Layout", "/reference/general/layout"],
-      ["Variables", "/reference/general/variables"],
-      ["Theme", "/reference/general/theme"]
-    ]]
-  ]],
-  ["Platform", [
-    ["User Object Model", "/reference/platform/user"],
-    ["Organization Object Model", "/reference/platform/organization"],
-    ["Session Tokens", "/reference/platform/session-token"],
-    ["JWTs", "/reference/platform/jwt"]
-  ]]
+  [
+    {
+      "title": "Users & Authentication",
+      "icon": "user",
+      "root": "users-and-auth"
+    },
+    [
+      ["Overview", "/organizations/overview"],
+      "# Components",
+      ["<CreateOrganization/>", "/organizations/create-component"],
+      ["<OrganizationProfile/>", "/organizations/profile-component"],
+      ["<OrganizationSwitcher/>", "/organizations/switcher-component"],
+
+      "# Building custom flows",
+      ["Using metadata", "/organizations/metadata"],
+      ["Creating orgs", "/organizations/creating-organizations"],
+      ["Inviting users", "/organizations/inviting-users"],
+      ["Managing roles", "/organizations/managing-roles"],
+      ["Managing multiple orgs", "/organizations/multiple-orgs"]
+    ]
+  ],
+  [
+    { "title": "Organizations", "icon": "user-group", "root": "organizations" },
+    [
+      ["Overview", "/organizations/overview"],
+      "# Components",
+      ["<CreateOrganization/>", "/organizations/create-component"],
+      ["<OrganizationProfile/>", "/organizations/profile-component"],
+      ["<OrganizationSwitcher/>", "/organizations/switcher-component"],
+
+      "# Building custom flows",
+      ["Using metadata", "/organizations/metadata"],
+      ["Creating orgs", "/organizations/creating-organizations"],
+      ["Inviting users", "/organizations/inviting-users"],
+      ["Managing roles", "/organizations/managing-roles"],
+      ["Managing multiple orgs", "/organizations/multiple-orgs"]
+    ]
+  ],
+  "---",
+  [
+    { "title": "Account Portal", "icon": "color-swatch", "root": "components" },
+    []
+  ],
+  [{ "title": "Components", "icon": "template", "root": "components" }, []],
+  [{ "title": "Custom Flows", "icon": "template", "root": "components" }, []],
+  "---",
+  [
+    {
+      "title": "Migrations & Deployments",
+      "icon": "rocket",
+      "root": "organizations"
+    },
+    []
+  ],
+  [
+    { "title": "Testing", "icon": "beaker", "root": "testing" },
+    [
+      ["Overview", "/organizations/overview"],
+      "# Components",
+      ["<CreateOrganization/>", "/organizations/create-component"],
+      ["<OrganizationProfile/>", "/organizations/profile-component"],
+      ["<OrganizationSwitcher/>", "/organizations/switcher-component"],
+
+      "# Building custom flows",
+      ["Using metadata", "/organizations/metadata"],
+      ["Creating orgs", "/organizations/creating-organizations"],
+      ["Inviting users", "/organizations/inviting-users"],
+      ["Managing roles", "/organizations/managing-roles"],
+      ["Managing multiple orgs", "/organizations/multiple-orgs"]
+    ]
+  ],
+  [
+    {
+      "title": "Advanced Usage",
+      "icon": "user-group",
+      "root": "organizations"
+    },
+    [
+      ["Overview", "/organizations/overview"],
+      "# Components",
+      ["<CreateOrganization/>", "/organizations/create-component"],
+      ["<OrganizationProfile/>", "/organizations/profile-component"],
+      ["<OrganizationSwitcher/>", "/organizations/switcher-component"],
+
+      "# Building custom flows",
+      ["Using metadata", "/organizations/metadata"],
+      ["Creating orgs", "/organizations/creating-organizations"],
+      ["Inviting users", "/organizations/inviting-users"],
+      ["Managing roles", "/organizations/managing-roles"],
+      ["Managing multiple orgs", "/organizations/multiple-orgs"]
+    ]
+  ],
+  [
+    { "title": "Troubleshooting", "icon": "support", "root": "testing" },
+    [
+      ["Overview", "/organizations/overview"],
+      "# Components",
+      ["<CreateOrganization/>", "/organizations/create-component"],
+      ["<OrganizationProfile/>", "/organizations/profile-component"],
+      ["<OrganizationSwitcher/>", "/organizations/switcher-component"],
+
+      "# Building custom flows",
+      ["Using metadata", "/organizations/metadata"],
+      ["Creating orgs", "/organizations/creating-organizations"],
+      ["Inviting users", "/organizations/inviting-users"],
+      ["Managing roles", "/organizations/managing-roles"],
+      ["Managing multiple orgs", "/organizations/multiple-orgs"]
+    ]
+  ],
+  [{ "title": "Security", "icon": "lock-closed", "root": "components" }, []],
+  [
+    {
+      "title": "Upgrade Guides",
+      "icon": "arrow-circle-up",
+      "root": "upgrade-guides"
+    },
+    [
+      ["Overview", "/organizations/overview"],
+      "# Components",
+      ["<CreateOrganization/>", "/organizations/create-component"],
+      ["<OrganizationProfile/>", "/organizations/profile-component"],
+      ["<OrganizationSwitcher/>", "/organizations/switcher-component"],
+
+      "# Building custom flows",
+      ["Using metadata", "/organizations/metadata"],
+      ["Creating orgs", "/organizations/creating-organizations"],
+      ["Inviting users", "/organizations/inviting-users"],
+      ["Managing roles", "/organizations/managing-roles"],
+      ["Managing multiple orgs", "/organizations/multiple-orgs"]
+    ]
+  ],
+  "# SDK References",
+  [
+    { "title": "Javascript SDK", "root": "references/javascript" },
+    [
+      ["Overview", "/references/javascript/overview"],
+      [
+        { "title": "Clerk" },
+        [
+          ["Clerk", "/organizations/create-component"],
+          ["SignIn", "/organizations/create-component"],
+          ["SignUp", "/organizations/create-component"],
+          ["UserProfile", "/organizations/create-component"],
+          ["UserButton", "/organizations/create-component"],
+          ["OrganizationProfile", "/organizations/create-component"],
+          ["CreateOrganization", "/organizations/create-component"],
+          ["OrganizationMethods", "/organizations/create-component"],
+          ["RedirectMethods", "/organizations/create-component"],
+          ["BuildURLs", "/organizations/create-component"],
+          ["Handle Navigation", "/organizations/create-component"],
+          ["Session Methods", "/organizations/create-component"]
+        ]
+      ],
+      [
+        { "title": "User" },
+        [
+          ["User", "/organizations/create-component"],
+          ["Time-based OTP", "/organizations/create-component"],
+          ["Password Management", "/organizations/create-component"],
+          ["Create Metadata", "/organizations/create-component"]
+        ]
+      ],
+      [
+        { "title": "Organization" },
+        [
+          ["Organization", "/organizations/create-component"],
+          ["Members", "/organizations/create-component"],
+          ["Invitations", "/organizations/create-component"]
+        ]
+      ],
+      ["Organization Invitation", "/references/javascript/overview"],
+      ["Organization Membership", "/references/javascript/overview"],
+      ["Session", "/references/javascript/overview"],
+      ["SessionWithActivities", "/references/javascript/overview"],
+      ["Client", "/references/javascript/overview"],
+      ["ExternalAccount", "/references/javascript/overview"],
+      [
+        { "title": "Sign In" },
+        [
+          ["Sign In", "/organizations/create-component"],
+          ["First Factor", "/organizations/create-component"],
+          ["Second Factor", "/organizations/create-component"],
+          ["AuthenticateWith", "/organizations/create-component"]
+        ]
+      ],
+      [
+        { "title": "Sign Up" },
+        [
+          ["Sign Up", "/organizations/create-component"],
+          ["AuthenticateWith", "/organizations/create-component"],
+          ["Verification", "/organizations/create-component"],
+          ["Email Verification", "/organizations/create-component"],
+          ["Phone Verification", "/organizations/create-component"],
+          ["Web3 Verification", "/organizations/create-component"]
+        ]
+      ],
+      [
+        { "title": "Email Address" },
+        [
+          ["Email Address", "/organizations/create-component"],
+          ["Verification", "/organizations/create-component"]
+        ]
+      ],
+      [
+        { "title": "Phone Number" },
+        [
+          ["Phone Number", "/organizations/create-component"],
+          ["Verification", "/organizations/create-component"],
+          ["SecondFactor", "/organizations/create-component"]
+        ]
+      ],
+      [
+        { "title": "Web3 Wallet" },
+        [
+          ["Web3 Wallet", "/organizations/create-component"],
+          ["Verification", "/organizations/create-component"]
+        ]
+      ],
+      ["Verification", "/references/javascript/overview"],
+      [
+        { "title": "Types" },
+        [
+          ["Public User Data", "/organizations/create-component"],
+          ["Redirect Options", "/organizations/create-component"],
+          ["Magic Link Error", "/organizations/create-component"],
+          ["Deleted Object", "/organizations/create-component"]
+        ]
+      ]
+    ]
+  ],
+  [
+    { "title": "React Components", "root": "references/react" },
+    [
+      "# Authentication Components",
+      ["<SignIn/>", "/references/react/clerk-provider"],
+      ["<SignUp/>", "/references/react/clerk-provider"],
+      ["<SignUpButton/>", "/references/react/clerk-provider"],
+
+      "# User Components",
+      ["<UserButton/>", "/references/react/clerk-provider"],
+      ["<UserProfile/>", "/references/react/clerk-provider"],
+
+      "# Organization Components",
+      ["<CreateOrganization/>", "/organizations/create-component"],
+      ["<OrganizationProfile/>", "/organizations/profile-component"],
+      ["<OrganizationSwitcher/>", "/organizations/switcher-component"],
+      "# Customization",
+      [
+        { "title": "Appearance prop" },
+        [
+          ["Elements", "/organizations/create-component"],
+          ["Layout", "/organizations/create-component"],
+          ["Themes", "/organizations/create-component"],
+          ["Variables", "/organizations/create-component"]
+        ]
+      ],
+      ["Localization prop (i18n)", "/organizations/create-component"],
+
+      "# Control Components",
+      [
+        "<AuthenticateWithRedirectCallback/>",
+        "/references/react/clerk-provider"
+      ],
+      ["<ClerkLoaded/>", "/references/react/clerk-provider"],
+      ["<ClerkLoading/>", "/references/react/clerk-provider"],
+      ["<ClerkProvider/>", "/references/react/clerk-provider"],
+      ["<MultisessionAppSupport/>", "/references/react/clerk-provider"],
+      ["<RedirectToSignIn/>", "/references/react/clerk-provider"],
+      ["<RedirectToSignUp/>", "/references/react/clerk-provider"],
+      ["<RedirectToUserProfile/>", "/references/react/clerk-provider"],
+      ["<SignedIn/>", "/references/react/clerk-provider"],
+      ["<SignedOut/>", "/references/react/clerk-provider"]
+    ]
+  ],
+  ["React Hooks", "refrences/nextjs"],
+  ["Next.js SDK", "refrences/nextjs"],
+  ["Remix", "refrences/remix"],
+  ["Gatsby", "refrences/gatsby"],
+  ["Node", "refrences/node"],
+  ["Go", "refrences/go"],
+  ["Community SDKs", "refrences/community"],
+  [
+    { "title": "React SDK" },
+    [
+      ["React Components", "refrences/nextjs"],
+      ["React Hooks", "refrences/nextjs"],
+      [
+        { "title": "Appearance prop" },
+        [
+          ["Elements", "/organizations/create-component"],
+          ["Layout", "/organizations/create-component"],
+          ["Themes", "/organizations/create-component"],
+          ["Variables", "/organizations/create-component"]
+        ]
+      ]
+    ]
+  ],
+  "# API References",
+  ["Frontend API", "refrences/frontend-api"],
+  ["Backend API", "refrences/backend-api"]
 ]
