docs: update "frontend API" and "backend API" links

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -325,6 +325,6 @@
     ]
   ],
   "# API References",
-  ["Frontend API", "refrences/frontend-api"],
-  ["Backend API", "refrences/backend-api"]
+  ["Frontend API", "https://reference.clerk.dev/reference/frontend-api-reference"],
+  ["Backend API", "https://clerk.com/docs/reference/backend-api"]
 ]
