Add note to CONTRIBUTING.md

--- a/package.json
+++ b/package.json
@@ -3,14 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "postbuild": "next-sitemap",
-    "start": "next start",
-    "lint": "next lint",
+    "lint": "npm run lint:check-links",
     "format": "eslint --fix .",
     "prepare": "husky install",
-    "check-links": "node ./scripts/check-links.mjs"
+    "lint:check-links": "node ./scripts/check-links.mjs"
   },
   "devDependencies": {
     "eslint-plugin-mdx": "^2.1.0",
