--- a/package.json
+++ b/package.json
@@ -3,15 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "postbuild": "next-sitemap",
-    "start": "next start",
-    "lint": "next lint",
+    "lint": "npm run lint:check-links",
     "format": "eslint --fix .",
-    "prepare": "husky install"
-  },
-  "dependencies": {
+    "prepare": "husky install",
+    "lint:check-links": "node ./scripts/check-links.mjs"
   },
   "devDependencies": {
     "eslint-plugin-mdx": "^2.1.0",
@@ -19,10 +14,16 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
+    "readdirp": "^3.6.0",
+    "remark": "^14.0.3",
+    "remark-mdx": "^2.3.0",
     "remark-preset-lint-consistent": "^5.1.2",
     "remark-preset-lint-markdown-style-guide": "^5.1.3",
     "remark-preset-lint-recommended": "^6.1.3",
-    "remark-preset-prettier": "^2.0.1"
+    "remark-preset-prettier": "^2.0.1",
+    "unist-util-visit": "^5.0.0",
+    "vfile": "^6.0.1",
+    "vfile-reporter": "^8.0.0"
   },
   "lint-staged": {
     "*{.js,.jsx,.ts,.tsx,.mdx,.md}": "eslint --fix"
