--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -143,7 +143,12 @@
       "icon": "template",
       "root": "account-portal"
     },
-    [["Overview", "/account-portal/overview"]]
+    [
+      ["Overview", "/account-portal/overview"],
+      ["Hosted Pages", "/account-portal/hosted-pages"],
+      ["Redirects", "/account-portal/redirects"],
+      ["Customization", "/account-portal/customization"]
+    ]
   ],
   [
     {
