--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -146,7 +146,7 @@
     [
       ["Overview", "/account-portal/overview"],
       ["Hosted Pages", "/account-portal/hosted-pages"],
-      ["Redirects", "/account-portal/redirects"],
+      ["Custom Redirects", "/account-portal/redirects"],
       ["Customization", "/account-portal/customization"]
     ]
   ],
