--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -145,7 +145,7 @@
     },
     [
       ["Overview", "/account-portal/overview"],
-      ["Hosted Pages", "/account-portal/hosted-pages"],
+      ["Pages", "/account-portal/pages"],
       ["Custom Redirects", "/account-portal/redirects"],
       ["Customization", "/account-portal/customization"]
     ]
