feat(mdx): Adds rate limits doc and updates the manifest

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -48,6 +48,7 @@
       ["<SignIn/>", "/authentication/components/sign-in"],
       "# Social Connections",
       ["Overview", "/authentication/social-connections/overview"],
+      ["Social connections (OAuth)", "/authentication/social-connections/oauth"]
       ["Google", "/authentication/social-connections/google"],
       ["Facebook", "/authentication/social-connections/facebook"],
       ["Microsoft", "/authentication/social-connections/microsoft"],
@@ -250,7 +251,9 @@
       ["Hasura", "/integrations/databases/hasura"],
       ["Nhost", "/integrations/databases/nhost"],
       ["Supabase", "/integrations/databases/supabase"],
-      ["Wundergraph", "/integrations/databases/wundergraph"]
+      ["Wundergraph", "/integrations/databases/wundergraph"],
+      "# Analytics",
+      ["Google Analytics", "/integrations/analytics/google-analytics"]
     ]
   ],
   [
@@ -268,7 +271,7 @@
       ["Overview", "/deployments/migrate-overview"],
       ["Import users", "/deployments/import-users"],
       ["Export users", "/deployments/export-users"],
-      ["Migrate from Firbase", "/deployments/migrate-from-firebase"]
+      ["Migrate from Firebase", "/deployments/migrate-from-firebase"]
     ]
   ],
   [
@@ -424,7 +427,7 @@
       ["Session", "/references/javascript/session"],
       [
         "SessionWithActivities",
-        "/references/javascript/session-waith-activities"
+        "/references/javascript/session-with-activities"
       ],
       ["Client", "/references/javascript/client"],
       ["ExternalAccount", "/references/javascript/external-account"],
