feat(mdx): Adds SignOutButton link to manifest

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -207,7 +207,8 @@
         "<SignInWithMetamaskButton/>",
         "/components/unstyled/sign-in-with-metamask"
       ],
-      ["<SignUpButton/>", "/components/unstyled/sign-up-button"]
+      ["<SignUpButton/>", "/components/unstyled/sign-up-button"],
+      ["<SignOutButton/>", "/components/unstyled/sign-out-button"]
     ]
   ],
   [
