feat(mdx): Add organizations hooks

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -357,7 +357,8 @@
       ["useSignUp()", "/references/react/use-sign-up"],
       ["useSession()", "/references/react/use-session"],
       ["useSessionList()", "/references/react/use-session-list"],
-      ["getAuth()", "/references/nextjs/get-auth"]
+      ["useOrganization()", "/references/react/use-organization"],
+      ["useOrganizationList()", "/references/react/use-organization-list"]
     ]
   ],
   [
@@ -519,13 +520,6 @@
       ],
       ["Troubleshooting", "references/nodejs/troubleshooting"]
     ]
-  ],
-  [
-    {
-      "title": "React Native / Expo",
-      "root": "references/react-native"
-    },
-    [["Overview", "references/react-native/overview"]]
   ],
   [
     {
