feat(mdx): Add icons to reference sections

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -335,7 +335,7 @@
   ],
   "# SDK References",
   [
-    { "title": "Next.js", "root": "references/nextjs" },
+    { "title": "Next.js", "icon": "nextjs", "root": "references/nextjs" },
     [
       ["Overview", "/references/nextjs/overview"],
       ["withClerkMiddleware", "/references/nextjs/with-clerk-middleware"],
@@ -344,7 +344,7 @@
     ]
   ],
   [
-    { "title": "React", "root": "references/react" },
+    { "title": "React", "icon": "react", "root": "references/react" },
     [
       ["Overview", "/references/react/overview"],
       ["useClerk()", "/references/react/use-clerk"],
@@ -357,7 +357,11 @@
     ]
   ],
   [
-    { "title": "Javascript", "root": "references/javascript" },
+    {
+      "title": "Javascript",
+      "icon": "javascript",
+      "root": "references/javascript"
+    },
     [
       ["Overview", "/references/javascript/overview"],
       [
@@ -503,6 +507,7 @@
   [
     {
       "title": "Node.js",
+      "icon": "nodejs",
       "root": "references/nodejs"
     },
     [
@@ -526,6 +531,7 @@
   [
     {
       "title": "Remix",
+      "icon": "remix",
       "root": "references/remix"
     },
     [
@@ -537,6 +543,7 @@
   [
     {
       "title": "Go",
+      "icon": "go",
       "root": "references/go"
     },
     [
@@ -548,6 +555,7 @@
   [
     {
       "title": "Gatsby",
+      "icon": "gatsby",
       "root": "references/gatsby"
     },
     [
@@ -558,6 +566,7 @@
   [
     {
       "title": "Ruby / Rails",
+      "icon": "ruby",
       "root": "references/ruby"
     },
     [
