add /references/react/use-user to nav; use codeblocktabs instead of tabs where necessary; remove unnecessary imports

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -348,6 +348,7 @@
     { "title": "React", "root": "references/react" },
     [
       ["Overview", "/references/react/overview"],
+      ["useUser()", "/references/react/use-user"],
       ["useClerk()", "/references/react/use-clerk"],
       ["useAuth()", "/references/react/use-auth"],
       ["useSignIn()", "/references/react/use-sign-in"],
