feat(mdx): more docs updates (#159)
Co-authored-by: Alexis Aguilar <98043211+alexisintech@users.noreply.github.com>

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -49,6 +49,7 @@
       ["<SignIn/>", "/authentication/components/sign-in"],
       "# Social Connections",
       ["Overview", "/authentication/social-connections/overview"],
+      ["Social connections (OAuth)", "/authentication/social-connections/oauth"]
       ["Google", "/authentication/social-connections/google"],
       ["Facebook", "/authentication/social-connections/facebook"],
       ["Microsoft", "/authentication/social-connections/microsoft"],
@@ -207,7 +208,8 @@
         "<SignInWithMetamaskButton/>",
         "/components/unstyled/sign-in-with-metamask"
       ],
-      ["<SignUpButton/>", "/components/unstyled/sign-up-button"]
+      ["<SignUpButton/>", "/components/unstyled/sign-up-button"],
+      ["<SignOutButton/>", "/components/unstyled/sign-out-button"]
     ]
   ],
   [
@@ -251,7 +253,9 @@
       ["Hasura", "/integrations/databases/hasura"],
       ["Nhost", "/integrations/databases/nhost"],
       ["Supabase", "/integrations/databases/supabase"],
-      ["Wundergraph", "/integrations/databases/wundergraph"]
+      ["Wundergraph", "/integrations/databases/wundergraph"],
+      "# Analytics",
+      ["Google Analytics", "/integrations/analytics/google-analytics"]
     ]
   ],
   [
@@ -269,7 +273,7 @@
       ["Overview", "/deployments/migrate-overview"],
       ["Import users", "/deployments/import-users"],
       ["Export users", "/deployments/export-users"],
-      ["Migrate from Firbase", "/deployments/migrate-from-firebase"]
+      ["Migrate from Firebase", "/deployments/migrate-from-firebase"]
     ]
   ],
   [
@@ -355,7 +359,8 @@
       ["useSignUp()", "/references/react/use-sign-up"],
       ["useSession()", "/references/react/use-session"],
       ["useSessionList()", "/references/react/use-session-list"],
-      ["getAuth()", "/references/nextjs/get-auth"]
+      ["useOrganization()", "/references/react/use-organization"],
+      ["useOrganizationList()", "/references/react/use-organization-list"]
     ]
   ],
   [
@@ -430,7 +435,7 @@
       ["Session", "/references/javascript/session"],
       [
         "SessionWithActivities",
-        "/references/javascript/session-waith-activities"
+        "/references/javascript/session-with-activities"
       ],
       ["Client", "/references/javascript/client"],
       ["ExternalAccount", "/references/javascript/external-account"],
@@ -522,13 +527,6 @@
       ],
       ["Troubleshooting", "references/nodejs/troubleshooting"]
     ]
-  ],
-  [
-    {
-      "title": "React Native / Expo",
-      "root": "references/react-native"
-    },
-    [["Overview", "references/react-native/overview"]]
   ],
   [
     {
