fix: fix manifest formatting

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -49,7 +49,10 @@
       ["<SignIn/>", "/authentication/components/sign-in"],
       "# Social Connections",
       ["Overview", "/authentication/social-connections/overview"],
-      ["Social connections (OAuth)", "/authentication/social-connections/oauth"]
+      [
+        "Social connections (OAuth)",
+        "/authentication/social-connections/oauth"
+      ],
       ["Google", "/authentication/social-connections/google"],
       ["Facebook", "/authentication/social-connections/facebook"],
       ["Microsoft", "/authentication/social-connections/microsoft"],
