feat: add docs for authMiddleware()

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -346,9 +346,10 @@
     { "title": "Next.js", "icon": "nextjs", "root": "references/nextjs" },
     [
       ["Overview", "/references/nextjs/overview"],
-      ["withClerkMiddleware", "/references/nextjs/with-clerk-middleware"],
+      ["authMiddleware()", "/references/nextjs/auth-middleware"],
+      ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"],
       ["getAuth()", "/references/nextjs/get-auth"],
-      ["buildClerkProps", "/references/nextjs/build-clerk-props"]
+      ["buildClerkProps()", "/references/nextjs/build-clerk-props"]
     ]
   ],
   [
