add missing docs pages; update references links

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -346,9 +346,17 @@
     { "title": "Next.js", "icon": "nextjs", "root": "references/nextjs" },
     [
       ["Overview", "/references/nextjs/overview"],
-      ["withClerkMiddleware", "/references/nextjs/with-clerk-middleware"],
+      "# App router",
+      ["auth()", "/references/nextjs/auth"],
+      ["currentUser()", "/references/nextjs/current-user"],
+      ["Route handlers", "/references/nextjs/route-handlers"],
+      ["Server actions", "/references/nextjs/server-actions"],
+      "# Pages router",
       ["getAuth()", "/references/nextjs/get-auth"],
-      ["buildClerkProps", "/references/nextjs/build-clerk-props"]
+      ["buildClerkProps", "/references/nextjs/build-clerk-props"],
+      ["withClerkMiddleware", "/references/nextjs/with-clerk-middleware"],
+      "---",
+      ["Authentication Object", "/references/nextjs/authentication-object"]
     ]
   ],
   [
