--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -346,12 +346,12 @@
     { "title": "Next.js", "icon": "nextjs", "root": "references/nextjs" },
     [
       ["Overview", "/references/nextjs/overview"],
-      "# App router",
+      "# App Router",
       ["auth()", "/references/nextjs/auth"],
       ["currentUser()", "/references/nextjs/current-user"],
       ["Route handlers", "/references/nextjs/route-handlers"],
       ["Server actions", "/references/nextjs/server-actions"],
-      "# Pages router",
+      "# Pages Router",
       ["getAuth()", "/references/nextjs/get-auth"],
       ["buildClerkProps", "/references/nextjs/build-clerk-props"],
       ["withClerkMiddleware", "/references/nextjs/with-clerk-middleware"],
