--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -349,8 +349,8 @@
       "# App Router",
       ["auth()", "/references/nextjs/auth"],
       ["currentUser()", "/references/nextjs/current-user"],
-      ["Route handlers", "/references/nextjs/route-handlers"],
-      ["Server actions", "/references/nextjs/server-actions"],
+      ["Route Handlers", "/references/nextjs/route-handlers"],
+      ["Server Actions", "/references/nextjs/server-actions"],
       "# Pages Router",
       ["getAuth()", "/references/nextjs/get-auth"],
       ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
