reorder the navigation items for /references/nextjs

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -346,6 +346,7 @@
     { "title": "Next.js", "icon": "nextjs", "root": "references/nextjs" },
     [
       ["Overview", "/references/nextjs/overview"],
+      ["authMiddleware()", "/references/nextjs/auth-middleware"],
       "# App Router",
       ["auth()", "/references/nextjs/auth"],
       ["currentUser()", "/references/nextjs/current-user"],
@@ -354,10 +355,9 @@
       "# Pages Router",
       ["getAuth()", "/references/nextjs/get-auth"],
       ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
-      ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"],
       "---",
-      ["authMiddleware()", "/references/nextjs/auth-middleware"],
-      ["Authentication Object", "/references/nextjs/authentication-object"]
+      ["Authentication Object", "/references/nextjs/authentication-object"],
+      ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
     ]
   ],
   [
