--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -347,9 +347,17 @@
     [
       ["Overview", "/references/nextjs/overview"],
       ["authMiddleware()", "/references/nextjs/auth-middleware"],
-      ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"],
+      "# App Router",
+      ["auth()", "/references/nextjs/auth"],
+      ["currentUser()", "/references/nextjs/current-user"],
+      ["Route Handlers", "/references/nextjs/route-handlers"],
+      ["Server Actions", "/references/nextjs/server-actions"],
+      "# Pages Router",
       ["getAuth()", "/references/nextjs/get-auth"],
-      ["buildClerkProps()", "/references/nextjs/build-clerk-props"]
+      ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
+      "---",
+      ["Authentication Object", "/references/nextjs/authentication-object"],
+      ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
     ]
   ],
   [
