add content on using trpc with nextjs

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -357,6 +357,7 @@
       ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
       "---",
       ["Authentication Object", "/references/nextjs/authentication-object"],
+      ["Using TRPC", "/references/nextjs/trpc"],
       ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
     ]
   ],
