add session tokens and rate limits to the nav

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -138,7 +138,10 @@
       ["Go", "/backend-requests/handling/go"],
       ["Gatsby", "/backend-requests/handling/gatsby"],
       ["Ruby / Rails", "/backend-requests/handling/ruby-rails"],
-      ["Manual JWT Verification", "/backend-requests/handling/manual-jwt"]
+      ["Manual JWT Verification", "/backend-requests/handling/manual-jwt"],
+      "# Resources",
+      ["Session tokens", "/backend-requests/resources/session-tokens"],
+      ["Rate limits", "/backend-requests/resources/rate-limits"]
     ]
   ],
   "---",
