--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -359,7 +359,7 @@
       ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
       "---",
       ["Authentication Object", "/references/nextjs/authentication-object"],
-      ["Using TRPC", "/references/nextjs/trpc"],
+      ["Using tRPC", "/references/nextjs/trpc"],
       ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
     ]
   ],
