add page for trpc; add session-tokens and rate-limits to the nav; remove express from the nav for now (no content) (#165)

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -21,7 +21,6 @@
       ["JavaScript", "/quickstarts/javascript"],
       ["React", "/quickstarts/react"],
       "# Backend",
-      ["Express", "/quickstarts/express"],
       ["Fastify", "/quickstarts/fastify"],
       "# Example Apps",
       ["Next.js starter repo", "https://github.com/clerkinc/clerk-next-app"],
@@ -138,7 +137,10 @@
       ["Go", "/backend-requests/handling/go"],
       ["Gatsby", "/backend-requests/handling/gatsby"],
       ["Ruby / Rails", "/backend-requests/handling/ruby-rails"],
-      ["Manual JWT Verification", "/backend-requests/handling/manual-jwt"]
+      ["Manual JWT Verification", "/backend-requests/handling/manual-jwt"],
+      "# Resources",
+      ["Session tokens", "/backend-requests/resources/session-tokens"],
+      ["Rate limits", "/backend-requests/resources/rate-limits"]
     ]
   ],
   "---",
@@ -357,6 +359,7 @@
       ["buildClerkProps()", "/references/nextjs/build-clerk-props"],
       "---",
       ["Authentication Object", "/references/nextjs/authentication-object"],
+      ["Using tRPC", "/references/nextjs/trpc"],
       ["withClerkMiddleware()", "/references/nextjs/with-clerk-middleware"]
     ]
   ],
