wip: adding backend references

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -344,6 +344,28 @@
     ]
   ],
   "# SDK References",
+  [ { "title": "Backend", "icon": "", "root": "/references/backend"},
+    [
+      ["Overview", "/references/backend/overview"],
+      [
+        { "title": "User Object" }, 
+        [
+          ["getUserList()", "/references/backend/get-user-list"],
+          ["getUser()", "/references/backend/get-user"],
+          ["getCount()", "/references/backend/get-count"],
+          ["createUser()", "/references/backend/create-user"],
+          ["updateUser()", "/references/backend/update-user"],
+          ["deleteUser()", "/references/backend/delete-user"]
+        ]
+      ],
+      [
+        { "title": "Organization Object" },
+        [
+          ["createOrganization()", "/references/backend/create-organization"]
+        ]
+      ]
+    ]
+  ],
   [
     { "title": "Next.js", "icon": "nextjs", "root": "references/nextjs" },
     [
