--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -361,7 +361,10 @@
       [
         { "title": "Organization Object" },
         [
-          ["createOrganization()", "/references/backend/organization/create-organization"]
+          ["Create", "/references/backend/organization/create"],
+          ["Get", "/references/backend/organization/get"],
+          ["Update", "/references/backend/organization/update"],
+          ["Delete", "/references/backend/organization/delete"]
         ]
       ]
     ]
