organize by methods per file

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -348,7 +348,7 @@
     [
       ["Overview", "/references/backend/overview"],
       [
-        { "title": "User Object" }, 
+        { "title": "User" }, 
         [
           ["getUserList()", "/references/backend/user/get-user-list"],
           ["getUser()", "/references/backend/user/get-user"],
@@ -359,12 +359,22 @@
         ]
       ],
       [
-        { "title": "Organization Object" },
+        { "title": "Organization" },
         [
-          ["Create", "/references/backend/organization/create"],
-          ["Get", "/references/backend/organization/get"],
-          ["Update", "/references/backend/organization/update"],
-          ["Delete", "/references/backend/organization/delete"]
+          ["getOrganization()", "/references/backend/organization/get-organization"],
+          ["getOrganizationList()", "/references/backend/organization/get-organization-list"],
+          ["getOrganizationMembershipList()", "/references/backend/organization/get-organization-membership-list"],
+          ["getPendingOrganizationInvitationList()", "/references/backend/organization/get-pending-organization-invitation-list"],
+          ["createOrganization()", "/references/backend/organization/create-organization"],
+          ["createOrganizationMembership()", "/references/backend/organization/create-organization-membership"],
+          ["createOrganizationInvitation()", "/references/backend/organization/create-organization-membership"],
+          ["updateOrganization()", "/references/backend/organization/update-organization"],
+          ["updateOrganizationMembership()", "/references/backend/organization/update-organization-membership"],
+          ["updateOrganizationMetadata()", "/references/backend/organization/update-organization-metadata"],
+          ["updateOrganizationMembershipMetadata()", "/references/backend/organization/update-organization-membership-metadata"],
+          ["deleteOrganization()", "/references/backend/organization/delete-organization"],
+          ["deleteOrganizationMembership()", "/references/backend/organization/delete-organization-membership"],
+          ["revokeOrganizationInvitation()", "/references/backend/organization/revoke-organization-invitation"]
         ]
       ]
     ]
