feat: Add multi-domain page

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -299,7 +299,8 @@
     [
       ["Customize your Session Token", "/advanced-usage/custom-session-token"],
       ["Manual JWT Verification", "/advanced-usage/manual-jwt"],
-      ["Clerk as an OAuth2 Provider", "/advanced-usage/clerk-idp"]
+      ["Clerk as an OAuth2 Provider", "/advanced-usage/clerk-idp"],
+      ["Multi Domain Setup", "/advanced-usage/multi-domain"]
     ]
   ],
   [
