add allowlist to /references/backend

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -623,6 +623,14 @@
           ["deleteOrganizationMembership()", "/references/backend/organization/delete-organization-membership"],
           ["revokeOrganizationInvitation()", "/references/backend/organization/revoke-organization-invitation"]
         ]
+      ],
+      [
+        { "title": "Allowlist Identifiers" },
+        [
+          ["getAllowlistIdentifierList()", "/references/backend/allowlist/get-allowlist-identifier-list"],
+          ["createAllowlistIdentifier()", "/references/backend/allowlist/create-allowlist-identifier"],
+          ["deleteAllowlistIdentifier()", "/references/backend/allowlist/delete-allowlist-identifier"]
+        ]
       ]
     ]
   ],
