--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -591,7 +591,7 @@
     ]
   ],
   "# API References",
-  [ { "title": "Backend", "icon": "", "root": "/references/backend"},
+  [ { "title": "Backend SDK", "icon": "", "root": "/references/backend"},
     [
       ["Overview", "/references/backend/overview"],
       [
