add client to /backend/references

--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -631,6 +631,14 @@
           ["createAllowlistIdentifier()", "/references/backend/allowlist/create-allowlist-identifier"],
           ["deleteAllowlistIdentifier()", "/references/backend/allowlist/delete-allowlist-identifier"]
         ]
+      ],
+      [ 
+        { "title": "Client" },
+        [
+          ["getClient()", "/references/backend/client/get-client"],
+          ["getClientList()", "/references/backend/client/get-client-list"],
+          ["verifyClient()", "/references/backend/client/verify-client"]
+        ]
       ]
     ]
   ],
